整理沒用到的樣式

--- a/YS150.html
+++ b/YS150.html
@@ -8,10 +8,10 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 
 	<title>養聲堂科技 - 無線數位麥克風</title>
-
-	<meta name="keywords" content="HTML5 Template" />
+	
 	<meta name="description" content="養聲堂科技-創新，穿戴式無線麥克風、擴音器。輕量以及長效電池。適合教學使用">
 	<meta name="author" content="養聲堂科技">
+	<meta name="format-detection" content="telephone=no">
 
 	<!-- Favicon -->
 	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
@@ -23,18 +23,11 @@
 	<!-- Mobile Metas -->
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, shrink-to-fit=no">
 
-
-
-	<!-- Web Fonts  -->
-	<link id="googleFonts"
-		href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800%7CShadows+Into+Light&display=swap"
-		rel="stylesheet" type="text/css">
-
 	<!-- Vendor CSS -->
 	<link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css">
 	<link rel="stylesheet" href="vendor/fontawesome-free/css/all.min.css">
 	<link rel="stylesheet" href="vendor/animate/animate.compat.css">
-	<link rel="stylesheet" href="vendor/simple-line-icons/css/simple-line-icons.min.css">
+	<!-- <link rel="stylesheet" href="vendor/simple-line-icons/css/simple-line-icons.min.css"> -->
 	<link rel="stylesheet" href="vendor/owl.carousel/assets/owl.carousel.min.css">
 	<link rel="stylesheet" href="vendor/owl.carousel/assets/owl.theme.default.min.css">
 	<link rel="stylesheet" href="vendor/magnific-popup/magnific-popup.min.css">
@@ -44,8 +37,8 @@
 	<link rel="stylesheet" href="css/yt-icon.css">
 	<link rel="stylesheet" href="css/theme.css">
 	<link rel="stylesheet" href="css/theme-elements.css">
-	<link rel="stylesheet" href="css/theme-blog.css">
-	<link rel="stylesheet" href="css/theme-shop.css">
+	<!-- <link rel="stylesheet" href="css/theme-blog.css"> -->
+	<!-- <link rel="stylesheet" href="css/theme-shop.css"> -->
 
 
 
@@ -85,7 +78,7 @@
 								<div
 									class="header-nav header-nav-line header-nav-top-line header-nav-top-line-with-border order-2 order-lg-1">
 									<div
-										class="header-nav-main header-nav-main-square header-nav-main-font-md header-nav-main-effect-2 header-nav-main-sub-effect-1">
+										class="header-nav-main header-nav-main-square header-nav-main-font-lg header-nav-main-effect-2 header-nav-main-sub-effect-1">
 										<nav class="collapse">
 											<ul class="nav nav-pills" id="mainNav">
 												<li class="dropdown">
@@ -98,24 +91,36 @@
 														關於我們
 													</a>
 												</li>
-												<li class="dropdown">
-													<a class="dropdown-item dropdown-toggle active" href="#">
+												<li class="dropdown dropdown-mega">
+													<a class="dropdown-item dropdown-toggle" href="#">
 														產品介紹
 													</a>
 													<ul class="dropdown-menu">
-														<li class="dropdown-submenu">
-															<a class="dropdown-item" href="#">二代無線擴音 / 麥克風</a>
-															<ul class="dropdown-menu">
-																<li><a class="dropdown-item" href="YS100.html">YS-100 手持無線麥克風</a></li>
-																<li><a class="dropdown-item" href="YS150.html">YS-150 頸掛穿戴無線麥克風</a></li>
-																<li><a class="dropdown-item" href="YS200.html">YS-200 智慧無線接收主機</a></li>
-																<li><a class="dropdown-item" href="YS250.html">YS-250 無線擴音音箱</a></li>
-															</ul>
-														</li>
 														<li>
-															<a class="dropdown-item" href="YH801.html">
-																YH-801 一代無線麥克風組
-															</a>
+															<div class="dropdown-mega-content">
+																<div class="row">
+																	<div class="col-lg-3">
+																		<span class="dropdown-mega-sub-title">二代無線麥克風</span>
+																		<ul class="dropdown-mega-sub-nav">
+																			<li><a class="dropdown-item" href="YS100.html">YS-100 手持無線麥克風</a></li>
+																			<li><a class="dropdown-item" href="YS150.html">YS-150 頸掛穿戴無線麥克風</a></li>
+																		</ul>
+																	</div>
+																	<div class="col-lg-3">
+																		<span class="dropdown-mega-sub-title">二代無線擴音</span>
+																		<ul class="dropdown-mega-sub-nav">
+																			<li><a class="dropdown-item" href="YS200.html">YS-200 智慧無線接收主機</a></li>
+																			<li><a class="dropdown-item" href="YS250.html">YS-250 無線擴音音箱</a></li>
+																		</ul>
+																	</div>
+																	<div class="col-lg-3">
+																		<span class="dropdown-mega-sub-title">一代無線麥克風</span>
+																		<ul class="dropdown-mega-sub-nav">
+																			<li><a class="dropdown-item" href="YH801.html">YH-801 一代無線麥克風組</a></li>
+																		</ul>
+																	</div>
+																</div>
+															</div>
 														</li>
 													</ul>
 												</li>
@@ -149,19 +154,20 @@
 		</header>
 
 		<div role="main" class="main">
-			<section class="page-header page-header-modern page-header-background page-header-background-sm m-0"
-				style="background-image: url(img/demos/industry-factory/backgrounds/background-2.jpg); background-size: cover; background-position: center;">
+			<section class="page-header page-header-classic mb-0"
+				style="background-image: url(img/backgrounds/background-1.jpg); background-size: cover; background-position: center;">
 				<div class="container">
 					<div class="row">
-						<div class="col-md-7 order-2 order-md-1 align-self-center p-static">
-							<h1 class="font-weight-bold text-8 mb-0">二代無線擴音 <span class="text-0 special-10">/</span> 麥克風</h1>
-						</div>
-						<div class="col-md-5 order-1 order-md-2 align-self-center">
-							<ul class="breadcrumb breadcrumb-light d-block text-md-right text-4 mb-0">
-								<li><a href="index.html" class="text-decoration-none">首頁</a></li>
-								<li class="active">二代無線擴音 <span class="text-0 special-5">/</span> 麥克風</li>
-								<li class="active">YS-150 頸掛數位無線麥克風</li>
+						<div class="col">
+							<ul class="breadcrumb breadcrumb-light">
+								<li class="pb-1 text-3" class="text-decoration-none"><a href="index.html">首頁</a></li>
+								<li class="active">二代無線麥克風</li>
 							</ul>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col p-static">
+							<h1 class="text-5 font-weight-extra-bold" data-title-border>YS-150 頸掛數位無線麥克風</h1>
 						</div>
 					</div>
 				</div>
@@ -170,51 +176,51 @@
 			<!-- YS-150 -->
 			<div id="YS-150" class="container">
 				<div class="container">
-					<div class="mb-lg-0 pt-5 pb-5 mt-5 mb-5">
-						<h2 class="text-center font-weight-extra-bold line-height-7 text-9 mb-0" style="color: #0068b7;">YS-150
+					<div class="mb-lg-0 pt-5 pb-5 mt-2">
+						<h2 class="text-center font-weight-extra-bold line-height-7 text-7-8 mb-0" style="color: #0068b7;">YS-150
 							頸掛數位無線麥克風</h2>
-						<p class="text-center font-weight-extra-bold line-height-7 text-5 mb-0">全球獨創的頸掛設計與 40g 輕盈的人體工學機身</p>
-						<p class="text-center font-weight-extra-bold line-height-7 text-5 mb-0">最大傳輸距離可達10公尺</p>
+						<p class="text-center font-weight-extra-bold line-height-7 text-4 mb-0">全球獨創的頸掛設計與 40g 輕盈的人體工學機身</p>
+						<p class="text-center font-weight-extra-bold line-height-7 text-4 mb-0">最大傳輸距離可達10公尺</p>
 					</div>
 
-					<div class="row mb-4 pb-4 pt-5">
-						<div class="col-lg-6 mb-4 mb-lg-0">
+					<div class="row mb-4 pb-4 pt-2" style="align-items: flex-start;">
+						<div class="col-lg-6 mb-0 mb-lg-0">
 							<div class="image-hotspots">
 								<img src="img/products/YS-150/YS-150-01a.jpg" class="img-fluid" />
 
-								<a style="left: 17%; top: 29%;" class="image-hotspot image-hotspot-primary" onclick="selectItem('ys-1')">
+								<a style="left: 17%; top: 26%;" class="image-hotspot image-hotspot-primary" onclick="selectItem('ys-1')">
 									<strong>1</strong>
 								</a>
 
-								<a style="left: 28%; top: 50%;" class="image-hotspot image-hotspot-primary" onclick="selectItem('ys-2')">
+								<a style="left: 25%; top: 47%;" class="image-hotspot image-hotspot-primary" onclick="selectItem('ys-2')">
 									<strong>2</strong>
 								</a>
 
-								<a style="right: 26%; top: 57%;" class="image-hotspot image-hotspot-primary" onclick="selectItem('ys-3')">
+								<a style="right: 26%; top: 51%;" class="image-hotspot image-hotspot-primary" onclick="selectItem('ys-3')">
 									<strong>3</strong>
 								</a>
 
-								<a style="right: 39%; top: 69%;" class="image-hotspot image-hotspot-primary" onclick="selectItem('ys-4')">
+								<a style="right: 33%; top: 64%;" class="image-hotspot image-hotspot-primary" onclick="selectItem('ys-4')">
 									<strong>4</strong>
 								</a>
 							</div>
 						</div>
-						<div class="col-lg-6 mb-4 mb-lg-0">
+						<div class="col-lg-6 mb-0 mb-lg-0">
 							<ol class="list list-ordened list-ordened-style-2 pl-0">
 								<li class="ys-1">
-									<h4 class="font-weight-semibold mb-1">海綿套 :</h4>
+									<h4 class="font-weight-semibold text-4 mb-0">海綿套 :</h4>
 									<span class="text-3-4">可水洗 隨時更換。</span>
 								</li>
 								<li class="ys-2">
-									<h4 class="font-weight-semibold mb-1">麥克風軟管 :</h4>
+									<h4 class="font-weight-semibold text-4 mb-0">麥克風軟管 :</h4>
 									<span class="text-3-4">直徑 0.11公分軟管，可 180 定位將麥克風調整至您最適合的位置。</span>
 								</li>
 								<li class="ys-3">
-									<h4 class="font-weight-semibold mb-1">超輕量掛頸設計 :</h4>
+									<h4 class="font-weight-semibold text-4 mb-0">超輕量掛頸設計 :</h4>
 									<span class="text-3-4">電源與功能鍵合而為一，以達輕薄短小目的、操作依舊。</span>
 								</li>
 								<li class="ys-4">
-									<h4 class="font-weight-semibold mb-1">電源鍵 / 功能鍵 / LED燈號顯示 :</h4>
+									<h4 class="font-weight-semibold text-4 mb-0">電源鍵 / 功能鍵 / LED燈號顯示 :</h4>
 									<span class="text-3-4">LED 清晰顯示方式，可輕易了解麥克風狀態。</span>
 								</li>
 							</ol>
@@ -251,15 +257,13 @@
 				</div>
 			</div>
 
-			<section class="section section-angled border-0 pb-0 m-0 lazyloaded"
+			<section class="section section-angled border-0 p-0 m-0 lazyloaded"
 			  style="background-size: 100%; background-position: center top; background-color: #ffd8b0;">
-			  <div class="section-angled-layer-top section-angled-layer-increase-angle bg-color-light-scale-1"
-			    style="padding: 4rem 0;background-color: #ffffff !important"></div>
 				<div class="container">
-					<div class="py-5 pt-5 mt-5">
+					<div class="pb-4 pt-4">
 						<div class="text-center">
 							<a id="intro"></a>
-							<h3 class="text-center font-weight-extra-bold line-height-7 text-7 mb-0">產品特色</h3>
+							<h3 class="text-center font-weight-extra-bold line-height-7 text-6 mb-0">產品特色</h3>
 						</div>
 					</div>
 					<div class="row">
@@ -267,27 +271,27 @@
 							<ul class="list list-icons list-primary">
 								<li class="text-quaternary">
 									<i class="fas fa-check"></i>
-									<h4 class="font-weight-semibold mb-1">智慧連結 :</h4>
+									<h4 class="font-weight-semibold text-4 mb-0">智慧連結 :</h4>
 									<span class="text-3-4">可配對/記憶多個設備，完全不需回工廠設定。</span>
 								</li>
 								<li class="text-quaternary">
 									<i class="fas fa-check"></i>
-									<h4 class="font-weight-semibold mb-1">自動連接 :</h4>
+									<h4 class="font-weight-semibold text-4 mb-0">自動連接 :</h4>
 									<span class="text-3-4">免對頻。開機後智慧搜尋，自動對頻 不串音，自動連結立即使用。</span>
 								</li>
 								<li class="text-quaternary">
 									<i class="fas fa-check"></i>
-									<h4 class="font-weight-semibold mb-1">功率調整 :</h4>
+									<h4 class="font-weight-semibold text-4 mb-0">功率調整 :</h4>
 									<span class="text-3-4">同手機的無線功率動態調整技術；省電，以維護麥克風的擴音品質。</span>
 								</li>
 								<li class="text-quaternary">
 									<i class="fas fa-check"></i>
-									<h4 class="font-weight-semibold mb-1">抗干擾 :</h4>
+									<h4 class="font-weight-semibold text-4 mb-0">抗干擾 :</h4>
 									<span class="text-3-4">先進跳頻技術(FHSS)避免如 Wifi其他無線設備干擾，一對一連結。</span>
 								</li>
 								<li class="text-quaternary">
 									<i class="fas fa-check"></i>
-									<h4 class="font-weight-semibold mb-1">環境回授 :</h4>
+									<h4 class="font-weight-semibold text-4 mb-0">環境回授 :</h4>
 									<span class="text-3-4">特殊指向麥克風設計，避免環境喇叭聲音的回授。</span>
 								</li>
 							</ul>
@@ -296,22 +300,22 @@
 							<ul class="list list-icons list-primary">
 								<li class="text-quaternary">
 									<i class="fas fa-check"></i>
-									<h4 class="font-weight-semibold mb-1">產品設計 :</h4>
+									<h4 class="font-weight-semibold text-4 mb-0">產品設計 :</h4>
 									<span class="text-3-4">人體工學設計，以使用者便利與外觀為設計理念。</span>
 								</li>
 								<li class="text-quaternary">
 									<i class="fas fa-check"></i>
-									<h4 class="font-weight-semibold mb-1">重量 :</h4>
+									<h4 class="font-weight-semibold text-4 mb-0">重量 :</h4>
 									<span class="text-3-4">重量 43g。</span>
 								</li>
 								<li class="text-quaternary">
 									<i class="fas fa-check"></i>
-									<h4 class="font-weight-semibold mb-1">距離 :</h4>
+									<h4 class="font-weight-semibold text-4 mb-0">距離 :</h4>
 									<span class="text-3-4">15 公尺以上。</span>
 								</li>
 								<li class="text-quaternary">
 									<i class="fas fa-check"></i>
-									<h4 class="font-weight-semibold mb-1">使用時間 :</h4>
+									<h4 class="font-weight-semibold text-4 mb-0">使用時間 :</h4>
 									<span class="text-3-4">12hr.；長效鋰電池與加日本電池保護晶片，延長電池壽命。</span>
 								</li>
 							</ul>
@@ -363,30 +367,40 @@
 			<div class="row py-4 my-4">
 				<div class="col-md-5 col-lg-3 mb-5 mb-lg-0 pt-3">
 					<h5 class="text-5 mb-2 pb-1">與我聯絡</h5>
-					<p class="text-light">若您有任何無線麥克風的相關問題，歡迎您與養聲堂聯繫。能為您服務是我們的榮幸。</p>
+					<p class="text-4 text-light">若您有任何無線麥克風的相關問題，歡迎您與養聲堂聯繫。能為您服務是我們的榮幸。</p>
 					<ul class="list list-icons list-icons-lg">
-						<li class="mb-1"><i class="fas fa-phone-volume text-light"></i>
-							<p class="m-0 text-light">(02) 2395-5780</p>
+						<li class="mb-1">
+							<i class="fas fa-phone-volume text-light"></i>
+							<p class="text-5 m-0 font-weight-bold text-light">(02) 2395 - 5780</p>
 						</li>
-						<li class="mb-1"><i class="far fa-envelope text-light"></i>
-							<p class="m-0 text-light"><a class="text-light" href="mailto: younger.tone@gmail.com">
-									younger.tone@gmail.com</a></p>
+						<li class="mb-1">
+							<i class="far fa-envelope text-light"></i>
+							<p class="text-4 m-0 text-light">
+								<a class="text-light" href="mailto: younger.tone@gmail.com"> younger.tone@gmail.com</a>
+							</p>
 						</li>
-						<li class="mb-1"><i class="fab fa-line text-light"></i>
-							<p class="m-0 text-light">Line ID : young.tone</p>
+						<li class="mb-1">
+							<i class="fab fa-line text-light"></i>
+							<p class="text-4 m-0 text-light">Line ID : young.tone</p>
 						</li>
 					</ul>
 					<ul class="social-icons mt-4">
-						<li class="social-icons-line"><a href="#lineQrCode" data-toggle="modal" title="Line"><i
-									class="fab fa-line"></i></a></li>
-						<li class="social-icons-facebook"><a
-								href="https://www.facebook.com/%E9%A4%8A%E8%81%B2%E5%A0%82%E7%A7%91%E6%8A%80-779961655447214/"
-								target="_blank" title="Facebook"><i class="fab fa-facebook-f"></i></a></li>
+						<li class="social-icons-line">
+							<a href="#lineQrCode" data-toggle="modal" title="Line">
+								<i class="fab fa-line"></i>
+							</a>
+						</li>
+						<li class="social-icons-facebook">
+							<a href="https://www.facebook.com/%E9%A4%8A%E8%81%B2%E5%A0%82%E7%A7%91%E6%8A%80-779961655447214/"
+								target="_blank" title="Facebook">
+								<i class="fab fa-facebook-f"></i>
+							</a>
+						</li>
 					</ul>
 				</div>
 				<div class="col-md-7 col-lg-4 mb-5 mb-lg-0 pt-3">
 					<h5 class="text-5 mb-2">產品資訊</h5>
-					<p class="text-light">更多公司與產品資訊，請上臉書、Google或 YouTube 輸入"養聲堂"</p>
+					<p class="text-4 text-light">更多公司與產品資訊，請上臉書、Google或 YouTube 輸入"養聲堂"</p>
 					<blockquote class="with-borders blockquote__bg">
 						<p class="mb-3">
 							<a href="https://www.facebook.com/%E9%A4%8A%E8%81%B2%E5%A0%82%E7%A7%91%E6%8A%80-779961655447214/"
@@ -411,7 +425,7 @@
 					<h5 class="text-5 mb-2 pb-1">FaceBook</h5>
 					<div class="fb-page"
 						data-href="https://www.facebook.com/%E9%A4%8A%E8%81%B2%E5%A0%82%E7%A7%91%E6%8A%80-779961655447214/"
-						data-tabs="timeline,messages" data-width="250" data-height="400" data-small-header="true"
+						data-tabs="timeline,messages" data-width="400" data-height="300" data-small-header="true"
 						data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="false">
 						<blockquote cite="https://www.facebook.com/%E9%A4%8A%E8%81%B2%E5%A0%82%E7%A7%91%E6%8A%80-779961655447214/"
 							class="fb-xfbml-parse-ignore">
@@ -427,71 +441,12 @@
 			<div class="container py-2">
 				<div class="row py-2">
 					<div class="col-lg-7 d-flex align-items-center justify-content-center justify-content-lg-start mb-4 mb-lg-0">
-						<p>© 2021 養聲堂科技有限公司 Young Tone Tech Co., Ltd.</p>
+						<p class="text-4">© 2021 養聲堂科技有限公司 Young Tone Tech Co., Ltd.</p>
 					</div>
 				</div>
 			</div>
 		</div>
 	</footer>
-	<!-- New Product -->
-	<div class="modal fade" id="newProduct" tabindex="-1" role="dialog" aria-labelledby="newProductLabel"
-		aria-hidden="true">
-		<div class="modal-dialog modal-lg">
-			<div class="modal-content">
-				<div class="modal-header">
-					<h4 class="modal-title" id="newProductLabel">二代智慧無線麥克風擴音系統</h4>
-					<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-				</div>
-				<div class="modal-body">
-					<div class="media">
-						<div class="media-left media-top col-md-5" style="padding-bottom:15px">
-							<img src="img/mic.jpg" class="media-object" style="width:100%">
-							<img src="img/logo.jpg" style="width:60px;position: absolute;top:0;left:15px;">
-						</div>
-						<div class="col-md-7">
-							<div>
-								<h3 class="media-heading" style="font-size: 22px;font-weight: 600;margin-bottom: 0">
-									世界首創採用手機無線技術的</h3>
-							</div>
-							<h3 style="color:#86ae3c;margin:15px 0 13px 0;font-size: 20px;font-weight: 500;">
-								"二代智慧無線麥克風擴音系統"
-							</h3>
-							<p style="margin:10px 0 13px 0;font-size: 15px;font-weight: 500">
-								<span style="color:#999999;"">最新產品介紹與規格，請點擊</span><br>
-										<a href=" smartMic.htm"><span>產品介紹</span></a> 或
-									<a href=" https://www.youtube.com/channel/UCmDc3tKSyBSYxPnci35Jy-Q" target="_blank"><span>Youtube
-											頻道</span></a>
-							</p>
-							<p style="margin:5px 0 13px 0;font-size: 15px;font-weight: 500">
-								臉書
-								<a href="https://www.facebook.com/%E9%A4%8A%E8%81%B2%E5%A0%82%E7%A7%91%E6%8A%80-779961655447214/"
-									target="_blank"><span>FB粉絲團</span></a>
-							</p>
-							<!-- <div>
-										<h3 class="media-heading" style="font-size: 22px;font-weight: 600;margin-bottom: 0">
-											<i class="far fa-arrow-alt-right"></i> 春季優惠 實施中</h3>
-									</div>
-									<h3 style="color:#4472C4;margin:0 0 13px 25px;font-size: 20px;font-weight: 500;"><a
-											href="https://www.facebook.com/permalink.php?story_fbid=1919349818175053&id=779961655447214" target="_blank"><span>保固延長為 18 個月</span></a></h3>
-									<div>
-										<h3 class="media-heading" style="font-size: 22px;font-weight: 600"><i
-												class="far fa-arrow-alt-right"></i> 新上市</h3>
-									</div>
-									<h3 style="margin:5px 0 13px 25px;font-size: 20px;font-weight: 500">
-										<span>"二代智慧無線麥克風擴音系統"</span><br>
-										<a href="smartMic.htm"><span>產品介紹</span></a> |
-										<a href="https://www.facebook.com/%E9%A4%8A%E8%81%B2%E5%A0%82%E7%A7%91%E6%8A%80-779961655447214/"
-											target="_blank"><span>FB粉絲團</span></a>
-									</h3> -->
-						</div>
-					</div>
-				</div>
-				<div class="modal-footer">
-					<button type="button" class="btn btn-light" data-dismiss="modal">關閉提示</button>
-				</div>
-			</div>
-		</div>
-	</div>
 
 	<!-- Line QR code -->
 	<div class="modal fade" id="lineQrCode" tabindex="-1" role="dialog" aria-labelledby="lineQrCodeLabel"
