--- a/shop.html
+++ b/shop.html
@@ -6,11 +6,11 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">	
 
-		<title>養聲堂科技 - 無線數位麥克風</title>	
-
-		<meta name="keywords" content="HTML5 Template" />
+		<title>養聲堂科技 - 無線數位麥克風</title>
+		
 		<meta name="description" content="養聲堂科技-創新，穿戴式無線麥克風、擴音器。輕量以及長效電池。適合教學使用">
 		<meta name="author" content="養聲堂科技">
+		<meta name="format-detection" content="telephone=no">
 
 		<!-- Favicon -->
 		<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
@@ -22,18 +22,13 @@
 		<!-- Mobile Metas -->
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, shrink-to-fit=no">
 
-
-
-		<!-- Web Fonts  -->
-		<link id="googleFonts" href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800%7CShadows+Into+Light&display=swap" rel="stylesheet" type="text/css">
-
 		<!-- Vendor CSS -->
 		<link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css">
 		<link rel="stylesheet" href="vendor/fontawesome-free/css/all.min.css">
 		<link rel="stylesheet" href="vendor/animate/animate.compat.css">
-		<link rel="stylesheet" href="vendor/simple-line-icons/css/simple-line-icons.min.css">
-		<link rel="stylesheet" href="vendor/owl.carousel/assets/owl.carousel.min.css">
-		<link rel="stylesheet" href="vendor/owl.carousel/assets/owl.theme.default.min.css">
+		<!-- <link rel="stylesheet" href="vendor/simple-line-icons/css/simple-line-icons.min.css"> -->
+		<!-- <link rel="stylesheet" href="vendor/owl.carousel/assets/owl.carousel.min.css"> -->
+		<!-- <link rel="stylesheet" href="vendor/owl.carousel/assets/owl.theme.default.min.css"> -->
 		<link rel="stylesheet" href="vendor/magnific-popup/magnific-popup.min.css">
 
 		<!-- Theme CSS -->		
@@ -77,7 +72,7 @@
 							<div class="header-column justify-content-end">
 								<div class="header-row">
 									<div class="header-nav header-nav-line header-nav-top-line header-nav-top-line-with-border order-2 order-lg-1">
-										<div class="header-nav-main header-nav-main-square header-nav-main-font-md header-nav-main-effect-2 header-nav-main-sub-effect-1">
+										<div class="header-nav-main header-nav-main-square header-nav-main-font-lg header-nav-main-effect-2 header-nav-main-sub-effect-1">
 											<nav class="collapse">
 												<ul class="nav nav-pills" id="mainNav">
 													<li class="dropdown">
@@ -90,24 +85,36 @@
 															關於我們
 														</a>
 													</li>
-													<li class="dropdown">
+													<li class="dropdown dropdown-mega">
 														<a class="dropdown-item dropdown-toggle" href="#">
 															產品介紹
 														</a>
 														<ul class="dropdown-menu">
-															<li class="dropdown-submenu">
-																<a class="dropdown-item" href="#">二代無線擴音 / 麥克風</a>
-																<ul class="dropdown-menu">
-																	<li><a class="dropdown-item" href="YS100.html">YS-100 手持無線麥克風</a></li>
-																	<li><a class="dropdown-item" href="YS150.html">YS-150 頸掛穿戴無線麥克風</a></li>
-																	<li><a class="dropdown-item" href="YS200.html">YS-200 智慧無線接收主機</a></li>
-																	<li><a class="dropdown-item" href="YS250.html">YS-250 無線擴音音箱</a></li>
-																</ul>
-															</li>
 															<li>
-																<a class="dropdown-item" href="YH801.html">
-																	YH-801 一代無線麥克風組
-																</a>
+																<div class="dropdown-mega-content">
+																	<div class="row">
+																		<div class="col-lg-3">
+																			<span class="dropdown-mega-sub-title">二代無線麥克風</span>
+																			<ul class="dropdown-mega-sub-nav">
+																				<li><a class="dropdown-item" href="YS100.html">YS-100 手持無線麥克風</a></li>
+																				<li><a class="dropdown-item" href="YS150.html">YS-150 頸掛穿戴無線麥克風</a></li>
+																			</ul>
+																		</div>
+																		<div class="col-lg-3">
+																			<span class="dropdown-mega-sub-title">二代無線擴音</span>
+																			<ul class="dropdown-mega-sub-nav">
+																				<li><a class="dropdown-item" href="YS200.html">YS-200 智慧無線接收主機</a></li>
+																				<li><a class="dropdown-item" href="YS250.html">YS-250 無線擴音音箱</a></li>
+																			</ul>
+																		</div>
+																		<div class="col-lg-3">
+																			<span class="dropdown-mega-sub-title">一代無線麥克風</span>
+																			<ul class="dropdown-mega-sub-nav">
+																				<li><a class="dropdown-item" href="YH801.html">YH-801 一代無線麥克風組</a></li>
+																			</ul>
+																		</div>
+																	</div>
+																</div>
 															</li>
 														</ul>
 													</li>
@@ -140,40 +147,41 @@
 				</div>
 			</header>
 
-			<div role="main" class="main">				
-				<section class="page-header page-header-modern page-header-background page-header-background-sm m-0" style="background-image: url(img/demos/industry-factory/backgrounds/background-2.jpg); background-size: cover; background-position: center;">
+			<div role="main" class="main">
+				<section class="page-header page-header-classic mb-0"
+					style="background-image: url(img/backgrounds/background-1.jpg); background-size: cover; background-position: center;">
 					<div class="container">
 						<div class="row">
-							<div class="col-md-8 order-2 order-md-1 align-self-center p-static">
-								<h1 class="font-weight-bold text-8 mb-0">哪裡購買</h1>
-							</div>
-							<div class="col-md-4 order-1 order-md-2 align-self-center">
-								<ul class="breadcrumb breadcrumb-light d-block text-md-right text-4 mb-0">
-									<li><a href="index.html" class="text-decoration-none">首頁</a></li>
-									<li class="active">哪裡購買</li>
+							<div class="col">
+								<ul class="breadcrumb breadcrumb-light">
+									<li class="pb-1 text-3"><a href="index.html">首頁</a></li>
 								</ul>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col p-static">
+								<h1 class="text-5 font-weight-extra-bold" data-title-border>哪裡購買</h1>
 							</div>
 						</div>
 					</div>
 				</section>
 
 				<div class="container py-4">
-
 				  <div class="row">
 				    <div class="col my-5">
-				      <p class="line-height-7 text-4 mb-2 mt-3">我們是新創公司，且教育界通路特殊，目前產品是用網路方式做行銷，奇摩、露天、蝦皮平台都有銷售，產品銷售也都有7天鑑賞期。</p>
-              <p class="line-height-7 text-4 mb-5">若有團購、學校採購或其他任何問題， 請致電或 Line, FB 跟我們公司連絡或確認。</p>
+				      <p class="line-height-7 text-3-4 mb-2 mt-3">我們是新創公司，且教育界通路特殊，目前產品是用網路方式做行銷，奇摩、露天、蝦皮平台都有銷售，產品銷售也都有7天鑑賞期。</p>
+              <p class="line-height-7 text-3-4 mb-5">若有團購、學校採購或其他任何問題， 請致電或 Line, FB 跟我們公司連絡或確認。</p>
               <div class="card border-radius-0 bg-color-light border-0 box-shadow-1">
                 <div class="card-body">
-                  <a style="margin-bottom: 10px" href="https://tw.bid.yahoo.com/booth/Y5571533139?bfe=1"
+                  <a href="https://tw.bid.yahoo.com/booth/Y5571533139?bfe=1"
                     target="_blank"><img src="img/sales/sale-yahoo.png"></a>
-                  <a style="margin-bottom: 10px" href="http://class.ruten.com.tw/user/index00.php?s=youngtone"
+                  <a href="http://class.ruten.com.tw/user/index00.php?s=youngtone"
                     target="_blank"><img src="img/sales/sale-ruten.png"></a>
-                  <a style="margin-bottom: 10px" href="https://shopee.tw/youngtone" target="_blank"><img
+                  <a href="https://shopee.tw/youngtone" target="_blank"><img
                       src="img/sales/sale-shopee.png"></a>
                 </div>
               </div>
-              <p class="line-height-7 text-danger text-4 mb-5 mt-3">※ 我們提供的價格都已含運費</p>
+              <p class="line-height-7 text-danger text-3-4 mb-5 mt-3">※ 我們提供的價格都已含運費</p>
               
 
 				      
@@ -187,20 +195,40 @@
 					<div class="row py-4 my-4">
 						<div class="col-md-5 col-lg-3 mb-5 mb-lg-0 pt-3">
 							<h5 class="text-5 mb-2 pb-1">與我聯絡</h5>
-							<p class="text-light">若您有任何無線麥克風的相關問題，歡迎您與養聲堂聯繫。能為您服務是我們的榮幸。</p>
+							<p class="text-4 text-light">若您有任何無線麥克風的相關問題，歡迎您與養聲堂聯繫。能為您服務是我們的榮幸。</p>
 							<ul class="list list-icons list-icons-lg">
-								<li class="mb-1"><i class="fas fa-phone-volume text-light"></i><p class="m-0 text-light">(02) 2395-5780</p></li>
-								<li class="mb-1"><i class="far fa-envelope text-light"></i><p class="m-0 text-light"><a class="text-light" href="mailto: younger.tone@gmail.com"> younger.tone@gmail.com</a></p></li>
-								<li class="mb-1"><i class="fab fa-line text-light"></i><p class="m-0 text-light">Line ID : young.tone</p></li>
+								<li class="mb-1">
+									<i class="fas fa-phone-volume text-light"></i>
+									<p class="text-5 m-0 font-weight-bold text-light">(02) 2395 - 5780</p>
+								</li>
+								<li class="mb-1">
+									<i class="far fa-envelope text-light"></i>
+									<p class="text-4 m-0 text-light">
+										<a class="text-light" href="mailto: younger.tone@gmail.com"> younger.tone@gmail.com</a>
+									</p>
+								</li>
+								<li class="mb-1">
+									<i class="fab fa-line text-light"></i>
+									<p class="text-4 m-0 text-light">Line ID : young.tone</p>
+								</li>
 							</ul>
 							<ul class="social-icons mt-4">
-								<li class="social-icons-line"><a href="#defaultModal" data-toggle="modal" title="Line"><i class="fab fa-line"></i></a></li>
-								<li class="social-icons-facebook"><a href="https://www.facebook.com/%E9%A4%8A%E8%81%B2%E5%A0%82%E7%A7%91%E6%8A%80-779961655447214/" target="_blank" title="Facebook"><i class="fab fa-facebook-f"></i></a></li>
+								<li class="social-icons-line">
+									<a href="#lineQrCode" data-toggle="modal" title="Line">
+										<i class="fab fa-line"></i>
+									</a>
+								</li>
+								<li class="social-icons-facebook">
+									<a href="https://www.facebook.com/%E9%A4%8A%E8%81%B2%E5%A0%82%E7%A7%91%E6%8A%80-779961655447214/"
+										target="_blank" title="Facebook">
+										<i class="fab fa-facebook-f"></i>
+									</a>
+								</li>
 							</ul>
 						</div>
 						<div class="col-md-7 col-lg-4 mb-5 mb-lg-0 pt-3">
 							<h5 class="text-5 mb-2">產品資訊</h5>
-							<p class="text-light">更多公司與產品資訊，請上臉書、Google或 YouTube 輸入"養聲堂"</p>
+							<p class="text-4 text-light">更多公司與產品資訊，請上臉書、Google或 YouTube 輸入"養聲堂"</p>
 							<blockquote class="with-borders blockquote__bg">
 								<p class="mb-3">
 									<a href="https://www.facebook.com/%E9%A4%8A%E8%81%B2%E5%A0%82%E7%A7%91%E6%8A%80-779961655447214/"
@@ -225,7 +253,7 @@
 							<h5 class="text-5 mb-2 pb-1">FaceBook</h5>
 							<div class="fb-page"
 								data-href="https://www.facebook.com/%E9%A4%8A%E8%81%B2%E5%A0%82%E7%A7%91%E6%8A%80-779961655447214/"
-								data-tabs="timeline,messages" data-width="250" data-height="400" data-small-header="true"
+								data-tabs="timeline,messages" data-width="400" data-height="300" data-small-header="true"
 								data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="false">
 								<blockquote cite="https://www.facebook.com/%E9%A4%8A%E8%81%B2%E5%A0%82%E7%A7%91%E6%8A%80-779961655447214/"
 									class="fb-xfbml-parse-ignore">
@@ -241,77 +269,20 @@
 					<div class="container py-2">
 						<div class="row py-2">
 							<div class="col-lg-7 d-flex align-items-center justify-content-center justify-content-lg-start mb-4 mb-lg-0">
-								<p>© 2021 養聲堂科技有限公司 Young Tone Tech Co., Ltd.</p>
+								<p class="text-4">© 2021 養聲堂科技有限公司 Young Tone Tech Co., Ltd.</p>
 							</div>
 						</div>
 					</div>
 				</div>
 			</footer>
-			<!-- New Product -->
-			<div class="modal fade" id="newProduct" tabindex="-1" role="dialog" aria-labelledby="newProductLabel" aria-hidden="true">
-				<div class="modal-dialog modal-lg">
-					<div class="modal-content">
-						<div class="modal-header">
-							<h4 class="modal-title" id="newProductLabel">二代智慧無線麥克風擴音系統</h4>
-							<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-						</div>
-						<div class="modal-body">
-							<div class="media">
-								<div class="media-left media-top col-md-5" style="padding-bottom:15px">
-									<img src="img/mic.jpg" class="media-object" style="width:100%">
-									<img src="img/logo.jpg" style="width:60px;position: absolute;top:0;left:15px;">
-								</div>
-								<div class="col-md-7">
-									<div>
-										<h3 class="media-heading" style="font-size: 22px;font-weight: 600;margin-bottom: 0">
-											世界首創採用手機無線技術的</h3>
-									</div>
-									<h3 style="color:#86ae3c;margin:15px 0 13px 0;font-size: 20px;font-weight: 500;">
-										"二代智慧無線麥克風擴音系統"
-									</h3>
-									<p style="margin:10px 0 13px 0;font-size: 15px;font-weight: 500">
-										<span style="color:#999999;"">最新產品介紹與規格，請點擊</span><br>
-										<a href="smartMic.htm"><span>產品介紹</span></a> 或
-											<a href=" https://www.youtube.com/channel/UCmDc3tKSyBSYxPnci35Jy-Q" target="_blank"><span>Youtube
-													頻道</span></a>
-									</p>
-									<p style="margin:5px 0 13px 0;font-size: 15px;font-weight: 500">
-										臉書
-										<a href="https://www.facebook.com/%E9%A4%8A%E8%81%B2%E5%A0%82%E7%A7%91%E6%8A%80-779961655447214/"
-											target="_blank"><span>FB粉絲團</span></a>
-									</p>
-									<!-- <div>
-										<h3 class="media-heading" style="font-size: 22px;font-weight: 600;margin-bottom: 0">
-											<i class="far fa-arrow-alt-right"></i> 春季優惠 實施中</h3>
-									</div>
-									<h3 style="color:#4472C4;margin:0 0 13px 25px;font-size: 20px;font-weight: 500;"><a
-											href="https://www.facebook.com/permalink.php?story_fbid=1919349818175053&id=779961655447214" target="_blank"><span>保固延長為 18 個月</span></a></h3>
-									<div>
-										<h3 class="media-heading" style="font-size: 22px;font-weight: 600"><i
-												class="far fa-arrow-alt-right"></i> 新上市</h3>
-									</div>
-									<h3 style="margin:5px 0 13px 25px;font-size: 20px;font-weight: 500">
-										<span>"二代智慧無線麥克風擴音系統"</span><br>
-										<a href="smartMic.htm"><span>產品介紹</span></a> |
-										<a href="https://www.facebook.com/%E9%A4%8A%E8%81%B2%E5%A0%82%E7%A7%91%E6%8A%80-779961655447214/"
-											target="_blank"><span>FB粉絲團</span></a>
-									</h3> -->
-								</div>
-							</div>
-						</div>
-						<div class="modal-footer">
-							<button type="button" class="btn btn-light" data-dismiss="modal">關閉提示</button>
-						</div>
-					</div>
-				</div>
-			</div>
 
 			<!-- Line QR code -->
-			<div class="modal fade" id="defaultModal" tabindex="-1" role="dialog" aria-labelledby="defaultModalLabel" aria-hidden="true">
+			<div class="modal fade" id="lineQrCode" tabindex="-1" role="dialog" aria-labelledby="lineQrCodeLabel"
+				aria-hidden="true">
 				<div class="modal-dialog">
 					<div class="modal-content">
 						<div class="modal-header">
-							<h4 class="modal-title" id="defaultModalLabel">Line ID : <span class="text-success">young.tone</span></h4>
+							<h4 class="modal-title" id="lineQrCodeLabel">Line ID : <span class="text-success">young.tone</span></h4>
 							<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
 						</div>
 						<div class="modal-body">
@@ -339,7 +310,7 @@
 		<script src="vendor/jquery.gmap/jquery.gmap.min.js"></script>
 		<script src="vendor/lazysizes/lazysizes.min.js"></script>
 		<script src="vendor/isotope/jquery.isotope.min.js"></script>
-		<script src="vendor/owl.carousel/owl.carousel.min.js"></script>
+		<!-- <script src="vendor/owl.carousel/owl.carousel.min.js"></script> -->
 		<script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
 		<script src="vendor/vide/jquery.vide.min.js"></script>
 		<script src="vendor/vivus/vivus.min.js"></script>
