--- a/about.html
+++ b/about.html
@@ -493,15 +493,15 @@
 		<script src="vendor/jquery.cookie/jquery.cookie.min.js"></script>
 		<script src="vendor/popper/umd/popper.min.js"></script>
 		<script src="vendor/bootstrap/js/bootstrap.min.js"></script>
-		<script src="vendor/jquery.validation/jquery.validate.min.js"></script>
-		<script src="vendor/jquery.easy-pie-chart/jquery.easypiechart.min.js"></script>
-		<script src="vendor/jquery.gmap/jquery.gmap.min.js"></script>
+		<!-- <script src="vendor/jquery.validation/jquery.validate.min.js"></script> -->
+		<!-- <script src="vendor/jquery.easy-pie-chart/jquery.easypiechart.min.js"></script> -->
+		<!-- <script src="vendor/jquery.gmap/jquery.gmap.min.js"></script> -->
 		<script src="vendor/lazysizes/lazysizes.min.js"></script>
 		<script src="vendor/isotope/jquery.isotope.min.js"></script>
 		<script src="vendor/owl.carousel/owl.carousel.min.js"></script>
 		<script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
-		<script src="vendor/vide/jquery.vide.min.js"></script>
-		<script src="vendor/vivus/vivus.min.js"></script>
+		<!-- <script src="vendor/vide/jquery.vide.min.js"></script> -->
+		<!-- <script src="vendor/vivus/vivus.min.js"></script> -->
 
 		<!-- Theme Base, Components and Settings -->
 		<script src="js/theme.js"></script>
